feat: add default illustration image

--- a/themes/aquarium.css
+++ b/themes/aquarium.css
@@ -3,7 +3,7 @@ Name: Aquarium
 Description: A custom style by theme aquarium to ChatGPT Styles
 Collaborator: Mateus Neres
 Credits: https://github.com/mateusneresrb/
-Illustration:   
+Illustration: https://i.ibb.co/qpGDXF8/image.png  
 */
 
 body {
