--- a/themes/dracula.css
+++ b/themes/dracula.css
@@ -3,6 +3,7 @@ Name: Dracula
 Description: A style by Dracula Theme to ChatGPT Styles
 Collaborator: Mateus Neres
 Credits: https://draculatheme.com/
+Illustration: https://i.ibb.co/qpGDXF8/image.png
 */
 
 body {
