fix: change description in flamengo theme

--- a/themes/flamengo.css
+++ b/themes/flamengo.css
@@ -1,6 +1,6 @@
 /* 
 Name: Flamengo
-Description: A custom style by theme aquarium to ChatGPT Styles
+Description: A custom style by theme flamengo to ChatGPT Styles
 Collaborator: Mateus Neres
 Credits: https://github.com/mateusneresrb/
 Illustration: https://i.imgur.com/1vF5XP2.png
