feat: created theme pixel

--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -1,9 +1,9 @@
 /* 
 Name: Pixel
-Description: A custom style by theme aquarium to ChatGPT Styles
+Description: A custom style by theme pixel to ChatGPT Styles
 Collaborator: Victor Breno
 Credits: https://github.com/VictorBren0
-Illustration: https://i.imgur.com/1vF5XP2.png
+Illustration: https://i.imgur.com/nVszv3r.png
 */
 
 /* Initial background container */
