--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -55,6 +55,9 @@ div.group.w-full.bg-gray-50 {
 .dark .dark\:md\:bg-vert-dark-gradient {
    background-image: linear-gradient(180deg, rgba(90, 90, 90, 0), #6b6b6b 58.85%);
 }
+.md\:bg-vert-light-gradient{
+   background-image: linear-gradient(180deg, rgba(90, 90, 90, 0), #6b6b6b 58.85%);
+}
 
 /* Form area */
 div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm>a {
