--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -52,10 +52,7 @@ div.group.w-full.bg-gray-50 {
    border: black 2px solid;
 }
 
-.dark .dark\:md\:bg-vert-dark-gradient {
-   background-image: linear-gradient(180deg, rgba(90, 90, 90, 0), #6b6b6b 58.85%);
-}
-.md\:bg-vert-light-gradient{
+.dark .dark\:md\:bg-vert-dark-gradient, .md\:bg-vert-light-gradient{
    background-image: linear-gradient(180deg, rgba(90, 90, 90, 0), #6b6b6b 58.85%);
 }
 
