corrigido descrição do tema dark horizon

--- a/themes/dark.css
+++ b/themes/dark.css
@@ -1,6 +1,6 @@
 /* 
 Name: Dark Horizon
-Description: A custom style by theme aquarium to ChatGPT Styles
+Description: A custom style by theme dark horizon to ChatGPT Styles
 Collaborator: Gabriel Moreira.
 Credits: https://github.com/GabrielMoreiradeSouza
 Illustration: https://i.imgur.com/Pex62rJ.png
