--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -36,7 +36,9 @@ nav.h-full>a:first-child {
    margin-bottom: 20px;
    color: red;
 }
-
+.bg-\[\#050509\]{
+   background-color: #10A37F;
+}
 /* Chat area */
 div.group.w-full.text-gray-800 {
    background-color: #D9D9D9;
