--- a/themes/dark.css
+++ b/themes/dark.css
@@ -29,6 +29,10 @@ div.items-center, #__next > div.overflow-hidden.w-full.h-full.relative.flex > di
   nav.h-full {
     background:black;
   }
+
+  div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
+    background: none!important;
+  }
   
   /* Chat area */
   div.group.w-full.bg-gray-50{
