--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -18,14 +18,12 @@ nav.h-full {
    background: #10A37F !important;
 }
 
-button.btn.relative.btn-dark.btn-small.m-auto.mb-2 {
-   margin-top: 20px;
-   border: black 2px solid;
-   box-shadow: 5px 5px 2px 1px black;
-}
-
-button.btn.relative.btn-dark.btn-small.m-auto.mb-2 div {
-   background: none !important;
+div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
+    margin-top: 20px;
+    margin-right: 5px;
+    border: black 2px solid;
+    box-shadow: 5px 5px 2px 1px black;
+    background: #D9D9D9;
 }
 
 nav.h-full>a:first-child {
