--- a/themes/flamengo.css
+++ b/themes/flamengo.css
@@ -30,6 +30,10 @@ nav.h-full {
   background: #000000;
 }
 
+div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
+  background: none!important;	
+}
+
 /* Chat area */
 div.group.w-full.bg-gray-50{
    background: #500007!important;
