--- a/themes/dark.css
+++ b/themes/dark.css
@@ -6,152 +6,139 @@ Credits: https://github.com/GabrielMoreiradeSouza
 Illustration: https://i.imgur.com/Pex62rJ.png
 */
 
+/* \/ Background : container */
+.gstyle-background::before {
+   content: "";
+   display: block;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background-image: url(https://i.imgur.com/lt2lx36.jpg);
+   background-repeat: no-repeat;
+   background-size: cover;
+   opacity: 15%;
+}
+
 /* Initial background container */
-div.items-center, #__next > div.overflow-hidden.w-full.h-full.relative.flex > div.flex.h-full.max-w-full.flex-1.flex-col > main > div.flex-1.overflow-hidden > div {
-    background: black!important;
-  }
-  
-  #__next > div.overflow-hidden.w-full.h-full.relative.flex > div.flex.h-full.max-w-full.flex-1.flex-col > main > div.flex-1.overflow-hidden > div::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("https://i.imgur.com/lt2lx36.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 20%;
-  }
-  
-  /* SideBar */
-  nav.h-full {
-    background:black;
-  }
+div.items-center,
+#__next>div.overflow-hidden.w-full.h-full.relative.flex>div.flex.h-full.max-w-full.flex-1.flex-col>main>div.flex-1.overflow-hidden>div {
+   background-color: #181818 !important;}
 
-  div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
-    background: none!important;
-  }
-  
-  /* Chat area */
-  div.group.w-full.bg-gray-50{
-     background: #2727278a!important;
-  }
-  div.group.w-full.text-gray-800 {
-     background: none;
-     color: #ffffff;
-  }
+   .btn-neutral div {
+      background: none !important;}
 
-  /* Form area */
-  div.border-t {
-     background: none !important;
-  }
-  
-  div.w-full.h-32 {
-     background: none!important;
-  }
+/* Background container - TOP */
+.gstyle-background-top {
+   background: none!important;
+}
 
-  /* chat icon */
-  div.p-1.rounded-sm.items-center {
-     background-color: none !important;
-  }
-  
-  /* Table */
-  div.items-center table tr,
-  table thead,
-  table th,
-  table td {
-     color: #18c6e1;
-     border-color: #18c6e1;
-  }
-  
-  .prose :where(thead th):not(:where([class~=not-prose] *)) {
-     color: #2cb1c7 !important;
-  }
-  
-  /* Code */
-  pre div.flex.items-center.text-xs {
-     background: #1f4366;
-  }
-  
-  pre div.p-4.overflow-y-auto {
-     background: #141414;
-  }
-  
-  /* phrases when explaining code */
-  .prose :where(code):not(:where([class~=not-prose] *)) {
-     color: #2cb1c7 !important;
-  }
-  
-  .prose:where(code):not(:where([class~=not-prose] *)) {
-     color: #2cb1c7 !important;
-  }
-  
-  /* Some texts */
-  a.text-sm,
-  .text-sm {
-     color: #fff;
-     font-size: 1rem;
-  }
-  /* Letras inicio e icon */
-  blockquote,
-  dd,
-  dl,
-  fieldset,
-  figure,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  hr,
-  p,
-  pre,
-  button.text-gray-500 {
-     color: #ffffff
-  }
-  
-  .markdown ol li,
-  .markdown ol li>p,
-  .markdown ol ol,
-  .markdown ol ul,
-  .markdown ul li,
-  .markdown ul li>p,
-  .markdown ul ol,
-  .markdown ul ul {
-     color: #fff
-  }
-  
-  /* Others */
-  div.absolute.inset-y-0.right-0.w-8.z-10{
-     display: none!important;
-  }
-  
-  nav.h-full {
-     border-right: 1px solid;
-  }
-  
-  .fade-out {
-     opacity: 0;
-  }
-  
-  text-center,
+/* Background container - MIDDLE */
+.gstyle-background-middle {
+   background: none!important;
+}
+
+/* Background container - BOTTOM */
+.gstyle-background-bottom {
+   background: black!important;
+} 
+
+/* \/ SideBar : Background*/
+.gstyle-sidebar {
+  background: #0e0e0e;
+  border-right: 1px solid;
+}
+
+/* SideBar: Last used item */
+.gstyle-sidebar-lastused {
+   border-radius: 3px;
+   background: #000000!important;
+}
+
+/* SideBar: Background buttons */
+.gstyle-sidebar-buttons{
+   background: none!important;
+}
+
+/* \/ Chat area - BOT*/
+.gstyle-chatarea-bot {
+   background: #3f3e3e!important;
+   
+   
+}
+
+/* Chat area - User*/
+.gstyle-chatarea-user {
+   background: #0E0E0E;
+   color: white;
+}
+
+/* Chat Icon - BOT */
+.gstyle-chatarea-bot-icon {
+   background-color: black!important;
+}
+
+/* Form area - Bottom */
+.gstyle-formarea-bottom {
+   background: none!important;
+}
+
+/* Table - Header */
+.gstyle-table-header {
+   background: #9c9c9c;
+}
+
+/* Table - Container*/
+.gstyle-table-container {
+   border-color: #333333;
+   background: black!important;
+}
+
+/* Code - Header Table */
+.gstyle-code-header {
+   background: #363636;
+}
+
+/* Code - Container */
+.gstyle-code-container {
+   background: #0a0909;
+}
+
+/* Some buttons */
+.gstyle-generic-button {
+	border: rgb(92, 92, 92) 1px solid;
+}
+
+/* Fade out */
+.gstyle-generic-fadeout {
+   display: none!important;
+}
+
+/* Some texts */
+.gstyle-generic-text {
+   color: #fff;
+   font-size: 1rem;
+}
+
+/* Texts */
+.gstyle-generic-text2 {
+   color: #fff!important;
+}
+
+/* Markdown */
+.gstyle-generic-markdown {
+   color: #fff!important;
+}
+/* Background white */
+.gstyle-generic-whitebg {
+   background-color: #444444;
+}
+text-center,
   li.p-3,
   div.pl-3,
   button.rounded-md,
   button.rounded-full {
    color: #fff;
-   background: #888888;
-   border: rgb(83, 83, 83) 2px solid;
+   background: #969595;
+   border: rgb(53, 52, 52) 2px solid;
    box-shadow: 5px 5px 2px 1px rgb(58, 58, 58);
-  }
-  
-  div.items-start.text-center {
-     z-index: 10;
-  }
-  .btn-neutral div {
-   color: black;
-   background: none !important;
-  }
+   }
