fix: update fix

--- a/themes/pixel.css
+++ b/themes/pixel.css
@@ -6,48 +6,26 @@ Credits: https://github.com/VictorBren0
 Illustration: https://i.imgur.com/nVszv3r.png
 */
 
-/* 
-Name: Flamengo
-Description: A custom style by theme flamengo to ChatGPT Styles
-Collaborator: Mateus Neres
-Credits: https://github.com/mateusneresrb/
-Illustration: https://i.imgur.com/1vF5XP2.png
-*/
+/* background-middle */
 
-/* \/ Background : container */
-.gstyle-background::before {
-   content: "";
-   display: block;
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   background: #6b6b6b!important;
-   opacity: 15%;
+div.items-center,
+#__next>div.overflow-hidden.w-full.h-full.relative.flex>div.flex.h-full.max-w-full.flex-1.flex-col>main>div.flex-1.overflow-hidden>div {
+   background-color: #6b6b6b !important;
 }
 
-/* Background container - TOP */
-.gstyle-background-top {
-   background: #6b6b6b!important;
+/* background-bottom */
+main > div.flex-1.overflow-hidden > div > div{
+   background-color: #6b6b6b !important;
+
 }
 
-/* Background container - MIDDLE */
-.gstyle-background-middle {
-   background: #6b6b6b!important;
-}
-
-/* Background container - BOTTOM */
-.gstyle-background-bottom {
-   background: #6b6b6b!important;
-} 
-
-/* \/ SideBar : Background*/
-.gstyle-sidebar {
+/* SideBar */
+nav.h-full {
    background: #10A37F !important;
-  border-right: 1px solid;
 }
 
-/* SideBar: Last used item */
-.gstyle-sidebar-lastused {
+/* SideBar button days*/
+.sticky{
    border: black 2px solid;
    box-shadow: 5px 5px 2px 1px black;
    border-radius: 5px;
@@ -55,94 +33,174 @@ Illustration: https://i.imgur.com/1vF5XP2.png
    margin-top: 20px;
 }
 
-/* SideBar: Background buttons */
-.gstyle-sidebar-buttons{
-   margin-top: 20px;
-   margin-right: 5px;
-   border: black 2px solid;
-   box-shadow: 5px 5px 2px 1px black;
-   background: #D9D9D9;
+div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
+    margin-top: 20px;
+    margin-right: 5px;
+    border: black 2px solid;
+    box-shadow: 5px 5px 2px 1px black;
+    background: #D9D9D9;
 }
 
-/* \/ Chat area - BOT*/
-.gstyle-chatarea-bot {
-   background: #D9D9D9!important;
+nav.h-full>a:first-child {
+   background-color: #D9D9D9;
    border: black 2px solid;
    box-shadow: 5px 5px 2px 1px black;
    margin-right: 10px;
    margin-bottom: 20px;
    color: red;
 }
+.bg-\[\#050509\]{
+   background-color: #10A37F;
+}
+/* Chat area */
+div.group.w-full.text-gray-800 {
+   background-color: #D9D9D9;
+   width: 90%;
+   box-shadow: 5px 5px 2px 1px black;
+   color: #1a1a1a;
+   margin: 1%;
+   border: black 2px solid;
+}
 
-/* Chat area - User*/
-.gstyle-chatarea-user {
-   background: #D9D9D9!important;
+div.group.w-full.bg-gray-50 {
+   box-shadow: 5px 5px 2px 1px black;
+   border: black 2px solid;
+}
+
+.dark .dark\:md\:bg-vert-dark-gradient, .md\:bg-vert-light-gradient{
+   background-image: linear-gradient(180deg, rgba(90, 90, 90, 0), #6b6b6b 58.85%);
+}
+
+/* Form area */
+div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm>a {
+   background-color: #D9D9D9;
    border: black 2px solid;
    box-shadow: 5px 5px 2px 1px black;
    margin-right: 10px;
-   margin-bottom: 20px;
-   color: #000000!important;
 }
 
-/* Chat Icon - BOT */
-.gstyle-chatarea-bot-icon {
-   background-color: black!important;
+div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm>a:hover {
+   background-color: #343541;
+   color: #D9D9D9
 }
 
-/* Form area - Bottom */
-.gstyle-formarea-bottom {
-   background: none!important;
+
+
+/* chat icon */
+div.p-1.rounded-sm.items-center {
+   background: #10A37F !important;
+   border: black 2px solid !important;
 }
 
-/* Table - Header */
-.gstyle-table-header {
-   background: #0e0e0e;
+div.group.w-full.text-gray-800 img {
+   border: black 2px solid !important;
 }
 
-/* Table - Container*/
-.gstyle-table-container {
-   border-color: #585858;
-   background: black!important;
+/* Table */
+div.items-center table tr,
+table thead,
+table th,
+table td {
+   color: #18c6e1;
+   border-color: #18c6e1;
 }
 
-/* Code - Header Table */
-.gstyle-code-header {
-   background: #383838;
+.prose :where(thead th):not(:where([class~=not-prose] *)) {
+   color: #2cb1c7 !important;
 }
 
-/* Code - Container */
-.gstyle-code-container {
-   background: #0a0909;
+/* Code */
+pre div.flex.items-center.text-xs {
+   background: #1f4366;
 }
 
-/* Some buttons */
-.gstyle-generic-button {
+pre div.p-4.overflow-y-auto {
+   background: #141414;
+}
+
+/* phrases when explaining code */
+.prose :where(code):not(:where([class~=not-prose] *)) {
+   color: #2cb1c7 !important;
+}
+
+.prose:where(code):not(:where([class~=not-prose] *)) {
+   color: #2cb1c7 !important;
+}
+
+/* input*/
+div.flex.flex-col.w-full.py-2 {
+   background-color: #D9D9D9;
    border: black 2px solid;
+   box-shadow: 5px 5px 2px 1px black;
+   color: #1a1a1a;
 }
 
-/* Fade out */
-.gstyle-generic-fadeout {
-   display: none!important;
+.btn-neutral {
+   border: black 2px solid;
+   box-shadow: 5px 5px 2px 1px black;
+   color: red;
+   margin-top: 10px;
+}
+
+.btn-neutral div {
+   background: none !important;
 }
 
 /* Some texts */
-.gstyle-generic-text {
-   color: #000000;
+a.text-sm,
+.text-sm {
+   color: #1a1a1a;
    font-size: 1rem;
 }
 
-/* Texts */
-.gstyle-generic-text2 {
-   color: red!important;
+blockquote,
+dd,
+dl,
+fieldset,
+figure,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+   color: red
 }
 
-/* Markdown */
-.gstyle-generic-markdown {
-   color: #000000!important;
+.markdown ol li,
+.markdown ol li>p,
+.markdown ol ol,
+.markdown ol ul,
+.markdown ul li,
+.markdown ul li>p,
+.markdown ul ol,
+.markdown ul ul {
+   color: red
 }
 
-/* Background white */
-.gstyle-generic-whitebg {
-   background-color: blue;
+/* Others */
+div.absolute.inset-y-0.right-0.w-8.z-10 {
+   display: none !important;
 }
 
+nav.h-full {
+   border-right: 1px solid;
+}
+
+.fade-out {
+   opacity: 0;
+}
+
+text-center,
+li.p-3,
+div.pl-3,
+button.rounded-md,
+button.rounded-full {
+   border: black 2px solid;
+   box-shadow: 5px 5px 2px 1px black;
+}
+
+div.items-start.text-center {
+   z-index: 10;
+}
