--- a/themes/business.css
+++ b/themes/business.css
@@ -6,142 +6,119 @@ Credits: https://github.com/mateusneresrb/
 Illustration: https://i.imgur.com/OOfdOSa.png
 */
 
-/* Initial background container */
-div.items-center, #__next > div.overflow-hidden.w-full.h-full.relative.flex > div.flex.h-full.max-w-full.flex-1.flex-col > main > div.flex-1.overflow-hidden > div {
-  background: #110E0B!important;
+/* \/ Background : container */
+.gstyle-background::before {
+   content: "";
+   display: block;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background-image: url(https://rare-gallery.com/uploads/posts/585782-boardroom-boardroom.jpg);
+   background-repeat: no-repeat;
+   background-size: cover;
+   opacity: 15%;
 }
 
-#__next > div.overflow-hidden.w-full.h-full.relative.flex > div.flex.h-full.max-w-full.flex-1.flex-col > main > div.flex-1.overflow-hidden > div::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("https://rare-gallery.com/uploads/posts/585782-boardroom-boardroom.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 15%;
+/* Background container - TOP */
+.gstyle-background-top {
+   background: none!important;
 }
 
-/* SideBar */
-nav.h-full {
-  border-right: 1px solid;
-  background: #161311!important;
+/* Background container - MIDDLE */
+.gstyle-background-middle {
+   background: none!important;
 }
 
-div.flex.flex-col.gap-2.pb-2.text-gray-100.text-sm a {
-  background: none!important;
+/* Background container - BOTTOM */
+.gstyle-background-bottom {
+   background: #110E0B!important;
+} 
+
+/* \/ SideBar : Background*/
+.gstyle-sidebar {
+   border-right: 1px solid;
+   background: #161311!important;
 }
 
-/* Chat area */
-div.group.w-full.bg-gray-50{
+/* SideBar: Last used item */
+.gstyle-sidebar-lastused {
+   border-radius: 3px;
+   background: #1c1c1c!important;
+}
+
+/* SideBar: Background buttons */
+.gstyle-sidebar-buttons{
+   background: none!important;
+}
+
+/* \/ Chat area - BOT*/
+.gstyle-chatarea-bot {
    background: #504830!important;
 }
 
-div.group.w-full.text-gray-800 {
+/* Chat area - User*/
+.gstyle-chatarea-user {
    background: #252020;
 }
 
-/* Form area */
-div.border-t::before {
-   background: #110E0B!important;
+/* Chat Icon - BOT */
+.gstyle-chatarea-bot-icon {
+   background-color: #4c3d32!important;
 }
 
-div.w-full.h-32 {
-   background: #110E0B!important;
+/* Form area - Bottom */
+.gstyle-formarea-bottom {
+   background: none!important;
 }
 
-/* chat icon */
-div.p-1.rounded-sm.items-center {
-   background-color: none !important;
+/* Table - Header */
+.gstyle-table-header {
+   background: #4c3d32;
 }
 
-/* Table */
-div.items-center table tr,
-table thead,
-table th,
-table td {
-   color: #18c6e1;
-   border-color: #18c6e1;
+/* Table - Container*/
+.gstyle-table-container {
+   border-color: #585858;
+   background: black!important;
 }
 
-.prose :where(thead th):not(:where([class~=not-prose] *)) {
-   color: #2cb1c7 !important;
+/* Code - Header Table */
+.gstyle-code-header {
+   background: #4c3d32;
 }
 
-/* Code */
-pre div.flex.items-center.text-xs {
-   background: #1f4366;
+/* Code - Container */
+.gstyle-code-container {
+   background: #0a0909;
 }
 
-pre div.p-4.overflow-y-auto {
-   background: #141414;
+/* Some buttons */
+.gstyle-generic-button {
+	border: rgb(133, 96, 3) 1px solid;
 }
 
-/* phrases when explaining code */
-.prose :where(code):not(:where([class~=not-prose] *)) {
-   color: #2cb1c7 !important;
-}
-
-.prose:where(code):not(:where([class~=not-prose] *)) {
-   color: #2cb1c7 !important;
+/* Fade out */
+.gstyle-generic-fadeout {
+   display: none!important;
 }
 
 /* Some texts */
-a.text-sm,
-.text-sm {
+.gstyle-generic-text {
    color: #fff;
    font-size: 1rem;
 }
 
-blockquote,
-dd,
-dl,
-fieldset,
-figure,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-p,
-pre,
-button.text-gray-500 {
-   color: #fff
+/* Texts */
+.gstyle-generic-text2 {
+   color: #fff!important;
 }
 
-.markdown ol li,
-.markdown ol li>p,
-.markdown ol ol,
-.markdown ol ul,
-.markdown ul li,
-.markdown ul li>p,
-.markdown ul ol,
-.markdown ul ul {
-   color: #fff
+/* Markdown */
+.gstyle-generic-markdown {
+   color: #fff!important;
 }
 
-/* Others */
-div.absolute.inset-y-0.right-0.w-8.z-10{
-   display: none!important;
-}
-
-.fade-out {
-   opacity: 0;
-}
-
-text-center,
-li.p-3,
-div.pl-3,
-button.rounded-md,
-button.rounded-full {
-	border: #4c3d32 1px solid;
-}
-
-div.items-start.text-center {
-   z-index: 10;
+/* Background white */
+.gstyle-generic-whitebg {
+   background-color: #1e1e1e;
 }
